Fixing logo alignment again

--- a/Greenhill_Sarah_project2/css/main.css
+++ b/Greenhill_Sarah_project2/css/main.css
@@ -25,5 +25,5 @@ ul{
 #logo {
 	margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 40%;
 }
